--- a/war/fs/Tonyu/Projects/UFO/.desktop
+++ b/war/fs/Tonyu/Projects/UFO/.desktop
@@ -1,1 +1,1 @@
-{"runMenuOrd":["Page_index","TRocket","TJiki","Teki","TLeft","TTok","TTokSum","TBomb","SpriteChar","PlainChar","TextChar","SecretChar","DxChar","T1Text","T1Line","T1Page","Boot"]}
+{"runMenuOrd":["Page_index","TRocket","TJiki","Teki","TLeft","TTok","TTokSum","TBomb","SpriteChar","PlainChar","TextChar","SecretChar","DxChar","T1Text","T1Line","T1Page","Boot","T1Map","MediaPlayer"],"editorFontSize":null}
