--- a/war/fs/Tonyu/Projects/SandBox/.desktop
+++ b/war/fs/Tonyu/Projects/SandBox/.desktop
@@ -1,1 +1,1 @@
-{"runMenuOrd":["Bug","Prominence","SlideShow","Maps"],"editorFontSize":12}
+{"runMenuOrd":["Main","B","TQuery"],"editorFontSize":null}
