--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -7,19 +7,21 @@
 		<servlet-name>Tonyuedit</servlet-name>
 		<url-pattern>/edit/*</url-pattern>
 	</servlet-mapping>
-	<!--<welcome-file-list>
-	 	<welcome-file>index.html</welcome-file>
-	</welcome-file-list>-->
- <servlet>
-  <servlet-name>SystemServiceServlet</servlet-name>
-  <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
-  <init-param>
-   <param-name>services</param-name>
-   <param-value/>
-  </init-param>
- </servlet>
- <servlet-mapping>
-  <servlet-name>SystemServiceServlet</servlet-name>
-  <url-pattern>/_ah/spi/*</url-pattern>
- </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Tonyuedit</servlet-name>
+        <url-pattern>/exe/*</url-pattern>
+    </servlet-mapping>
+	<!--<welcome-file-list> <welcome-file>index.html</welcome-file> </welcome-file-list> -->
+	<servlet>
+		<servlet-name>SystemServiceServlet</servlet-name>
+		<servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
+		<init-param>
+			<param-name>services</param-name>
+			<param-value/>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SystemServiceServlet</servlet-name>
+		<url-pattern>/_ah/spi/*</url-pattern>
+	</servlet-mapping>
 </web-app>
