--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -11,6 +11,10 @@
         <servlet-name>Tonyuedit</servlet-name>
         <url-pattern>/exe/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Tonyuedit</servlet-name>
+        <url-pattern>/app/*</url-pattern>
+    </servlet-mapping>
 	<!--<welcome-file-list> <welcome-file>index.html</welcome-file> </welcome-file-list> -->
 	<servlet>
 		<servlet-name>SystemServiceServlet</servlet-name>
